--- a/Pancake_Printer.ioc
+++ b/Pancake_Printer.ioc
@@ -4,8 +4,8 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,Queues01,FootprintOK,configTOTAL_HEAP_SIZE
-FREERTOS.Queues01=commandQueue,16,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;commandTask,8,128,StartCommandTask,Default,NULL,Dynamic,NULL,NULL;parserTask,8,128,StartParserTask,Default,NULL,Dynamic,NULL,NULL;menuTask,8,128,StartMenuTask,Default,NULL,Dynamic,NULL,NULL;extruderTask,8,128,StartExtruderTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Queues01=commandQueue,15,int,0,Dynamic,NULL,NULL;coordQueue,15,float,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;commandTask,24,350,StartCommandTask,Default,NULL,Dynamic,NULL,NULL;parserTask,24,400,StartParserTask,Default,NULL,Dynamic,NULL,NULL;extruderTask,24,128,StartExtruderTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=5000
 File.Version=6
 GPIO.groupedBy=Show All
@@ -19,8 +19,9 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=TIM1
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP7=TIM4
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -51,22 +52,23 @@ Mcu.Pin30=PB4 (NJTRST)
 Mcu.Pin31=PB5
 Mcu.Pin32=PB6
 Mcu.Pin33=PB7
-Mcu.Pin34=VP_FATFS_VS_Generic
-Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin36=VP_SYS_VS_tim2
-Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin34=PB8
+Mcu.Pin35=VP_FATFS_VS_Generic
+Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin37=VP_SYS_VS_tim2
+Mcu.Pin38=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA0
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=38
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
-MxCube.Version=6.9.2
-MxDb.Version=DB.6.0.92
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -100,12 +102,10 @@ PA12.Signal=GPIO_Output
 PA13\ (JTMS-SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS-SWDIO).GPIO_Label=TMS
 PA13\ (JTMS-SWDIO).Locked=true
-PA13\ (JTMS-SWDIO).Mode=Serial_Wire
 PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).GPIOParameters=GPIO_Label
 PA14\ (JTCK-SWCLK).GPIO_Label=TCK
 PA14\ (JTCK-SWCLK).Locked=true
-PA14\ (JTCK-SWCLK).Mode=Serial_Wire
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
 PA15\ (JTDI).GPIOParameters=GPIO_Label
 PA15\ (JTDI).GPIO_Label=Screen_DC
@@ -142,8 +142,9 @@ PA7.GPIO_Label=SD_MOSI
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=GPIO_Speed,GPIO_Label
 PA8.GPIO_Label=Z_DIR
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
@@ -196,6 +197,10 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=Screen_LED
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=Valve_Servo
+PB8.Locked=true
+PB8.Signal=S_TIM4_CH3
 PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=Screen_SCK
 PC10.Locked=true
@@ -263,7 +268,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false,7-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -319,14 +324,24 @@ RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SPI1.CalculateBaudRate=40.0 MBits/s
+SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
+SH.S_TIM4_CH3.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CalculateBaudRate=2.5 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,NSSPMode
 SPI1.Mode=SPI_MODE_MASTER
+SPI1.NSSPMode=SPI_NSS_PULSE_ENABLE
 SPI1.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler
 TIM1.Prescaler=80-1
+TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM4.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Pulse-PWM Generation3 CH3,OCPolarity_3,Period
+TIM4.OCPolarity_3=TIM_OCPOLARITY_HIGH
+TIM4.Period=16000
+TIM4.Prescaler=100
+TIM4.Pulse-PWM\ Generation3\ CH3=16000
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_FATFS_VS_Generic.Mode=User_defined
