--- a/Pancake_Printer.ioc
+++ b/Pancake_Printer.ioc
@@ -5,7 +5,7 @@ CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,Queues01,FootprintOK,configTOTAL_HEAP_SIZE
 FREERTOS.Queues01=commandQueue,15,int,0,Dynamic,NULL,NULL;coordQueue,15,float,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;commandTask,24,350,StartCommandTask,Default,NULL,Dynamic,NULL,NULL;parserTask,24,400,StartParserTask,Default,NULL,Dynamic,NULL,NULL;extruderTask,24,128,StartExtruderTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;commandTask,24,350,StartCommandTask,Default,NULL,Dynamic,NULL,NULL;parserTask,24,400,StartParserTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=5000
 File.Version=6
 GPIO.groupedBy=Show All
